--- a/add-ons/vault/Chart.yaml
+++ b/add-ons/vault/Chart.yaml
@@ -17,4 +17,4 @@ appVersion: "1.0"
 dependencies:
   - name: vault
     version: 0.22.1
-    repository: https://github.com/hashicorp/vault-helm
+    repository: https://helm.releases.hashicorp.com
