--- a/chart/templates/vault.yaml
+++ b/chart/templates/vault.yaml
@@ -20,6 +20,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: vault
   syncPolicy:
+    syncOptions:
+        CreateNamespace: true
     automated:
       prune: true
     retry:
