--- a/add-ons/aws-load-balancer-controller/values.yaml
+++ b/add-ons/aws-load-balancer-controller/values.yaml
@@ -1,3 +1,6 @@
 aws-load-balancer-controller:
   serviceAccount:
     create: false
+    name: aws-load-balancer-controller 
+  clusterName: spark-k8s-monitor
+  region: us-west-2
